updates example page footer

--- a/example/src/index.html
+++ b/example/src/index.html
@@ -12,7 +12,7 @@
 		<div id="app"></div>
 		<div class="hint"><!-- put any hints about your component example here --></div>
 		<div class="footer">
-			Copyright &copy; 2015 Ruben Barilani.
+			Copyright &copy; 2015 Zalando SE.
 		</div>
 	</div>
 	<script src="common.js"></script>
